# PyLIFT

./: .gitignore  .readthedocs.yaml  README.md  pyproject.toml
Examples/All_Atom/: All_Atom.py
docs/: conf.py  index.rst  pylift.rst  requirements.txt
docs/_build/doctrees/: environment.pickle  index.doctree  modules.doctree  pylift.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  pylift.html  search.html  searchindex.js
docs/_build/html/_modules/: index.html  pylift.html
docs/_build/html/_modules/pylift/: builder.html  reader.html  utilities.html  vmd.html  writer.html
examples/All_Atom/: All_Atom_Tutorial.md
examples/all_atom/: all_atom_tutorial.md  all_atom_tutorial.py
examples/all_atom/results/: ANTECHAMBER_BOND_TYPE.AC0  ATOMTYPE.INF  PIM-1.lmps  PIM-1_forTopo.tmp.mol2  PIM-1_fromTopo.tmp.lmps  all_atom_tutorial.py  gaff2.json  missing_ff_params.frcmod  terminal_output.txt
examples/charge_consolidation/: charge_consolidation.md
examples/ff_update/: ff_update_tutorial.md  ff_update_tutorial.py
examples/united_atom/: ANTECHAMBER_AC.AC  ANTECHAMBER_AC.AC0  PIM-1.lmps  PIM-1_forTopo.tmp.mol2  PIM-1_fromTopo.tmp.lmps  PIM-1_monomer.mol2  PIM-1_monomer_Amber.mol2  lammps_file.lmps  missing_ff_params.frcmod  united_atom_tutorial.md  united_atom_tutorial.py
pylift/: __init__.py  amber.py  builder.py  reader.py  utilities.py  vmd.py  writer.py
pylift/ff_data/: gaff.json  gaff2.json
scripts/: update_gaff.py  update_gaff2.py
