[build-system]
requires = ["setuptools>=77.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyLIFT"
version = "0.0.1dev1"
description = "preparation of LAMMPS input for polymer simulations"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "Brandon C. Tapia", email = "bctapia@mit.edu" } #,
#  { name = "TBA" },
#  { name = "TBA" },
#  { name = "TBA" }
]

dependencies = [
  "numpy",
  "matplotlib"]

keywords = ["membranes", "gas separation", "polymer modeling"]

classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Chemistry",
  "Topic :: Scientific/Engineering :: Physics"]


[project.optional-dependencies]
dev = ["pytest", "black", "build", "twine"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["pylift*"]

[tool.black]
target-version = ["py313"]
line-length = 100
skip-magic-trailing-comma = true
exclude = '''
/(
    examples
)/
'''
